Fixed a bug where the logger configuration was programmatically reset

--- a/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
+++ b/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
@@ -46,10 +46,11 @@
 			<artifactId>jaxb-runtime</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>com.uber</groupId>
-			<artifactId>h3</artifactId>
-		</dependency>
+<!-- Uber's h3 library is referenced indirectly via apache sedona -->
+<!--		<dependency>-->
+<!--			<groupId>com.uber</groupId>-->
+<!--			<artifactId>h3</artifactId>-->
+<!--		</dependency>-->
 		
 		<!-- javascript -->
 		<dependency>
@@ -196,13 +197,11 @@
 		<dependency>
 			<groupId>org.apache.sis.non-free</groupId>
 			<artifactId>sis-embedded-data</artifactId>
-			<version>1.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.sis.core</groupId>
 			<artifactId>sis-referencing</artifactId>
-			<version>1.0</version>
 		</dependency>
 
 		<dependency>
