--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -1216,9 +1216,9 @@
 						<groupId>org.slf4j</groupId>
 						<artifactId>slf4j-reload4j</artifactId>
 					</exclusion>
-					<!-- <exclusion> <groupId>log4j</groupId>
+					<exclusion> <groupId>log4j</groupId>
 					<artifactId>log4j</artifactId> 
-						</exclusion> -->
+						</exclusion>
 					<exclusion>
 						<groupId>org.slf4j</groupId>
 						<artifactId>slf4j-log4j12</artifactId>
@@ -1308,6 +1308,12 @@
 				<groupId>org.apache.tika</groupId>
 				<artifactId>tika-parsers-standard-package</artifactId>
 				<version>${tika.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>commons-logging</groupId>
+						<artifactId>commons-logging</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 			<!--
 			<dependency>
