--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -79,6 +79,7 @@
 		<commons-vfs2.version>2.9.0</commons-vfs2.version>
 		<ver.commons-math>3.6.1</ver.commons-math>
 		<hadoop.version>3.3.4</hadoop.version>
+		<commons-text.version>1.10.0</commons-text.version>
 		<junit.version>4.13.2</junit.version>
 		<tika.version>2.9.1</tika.version>
 		<aksw-commons.version>0.9.8-SNAPSHOT</aksw-commons.version>
@@ -1234,6 +1235,14 @@
 						</exclusion> -->
 				</exclusions>
 			</dependency>
+
+			<!-- Override hadoop's commons-text version because it conflicts with Fuseki's shiro mod -->
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-text</artifactId>
+				<version>${commons-text.version}</version>
+			</dependency>
+			
 			<!-- Servlet APIs -->
 			<dependency>
 				<groupId>jakarta.servlet</groupId>
