--- a/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
+++ b/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
@@ -80,6 +80,11 @@
 
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-quadengine</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
 			<artifactId>jenax-models-dcat-api</artifactId>
 		</dependency>
 
