--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -60,7 +60,7 @@
 		jakarta.xml; used only by a plugin in jenax-facete-impl -->
 
 		<!-- <jena.version>4.10.0</jena.version> -->
-		<jena.version>5.1.0-SNAPSHOT</jena.version>
+		<jena.version>5.0.0</jena.version>
 
 		<!-- <jetty.version>9.4.8.v20171121</jetty.version> -->
 		<!-- <jetty.version>9.4.18.v20190429</jetty.version> -->
@@ -82,7 +82,7 @@
 		<commons-text.version>1.10.0</commons-text.version>
 		<junit.version>4.13.2</junit.version>
 		<tika.version>2.9.1</tika.version>
-		<aksw-commons.version>0.9.8-SNAPSHOT</aksw-commons.version>
+		<aksw-commons.version>0.9.8</aksw-commons.version>
 		<jts.version>1.19.0</jts.version>
 		<gson.version>2.9.0</gson.version>
 		<annotation-api.version>1.3.2</annotation-api.version>
