--- a/jenax-arq-parent/jenax-arq-picocli/pom.xml
+++ b/jenax-arq-parent/jenax-arq-picocli/pom.xml
@@ -27,6 +27,10 @@
 			<groupId>info.picocli</groupId>
 			<artifactId>picocli</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-io-core</artifactId>
+		</dependency>
 		<!-- Unit Testing -->
 		<dependency>
 			<groupId>junit</groupId>
