--- a/jenax-arq-parent/jenax-arq-connection-parent/jenax-arq-connection-core/pom.xml
+++ b/jenax-arq-parent/jenax-arq-connection-parent/jenax-arq-connection-core/pom.xml
@@ -40,6 +40,11 @@
 			<artifactId>jenax-arq-utils</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-models-polyfill</artifactId>
+		</dependency>
+
 
 		<!-- Needed for blank node rewrite -->
 		<dependency>
