--- a/jenax-models-parent/jenax-models-polyfill/pom.xml
+++ b/jenax-models-parent/jenax-models-polyfill/pom.xml
@@ -23,6 +23,10 @@
 			<groupId>org.aksw.jenax</groupId>
 			<artifactId>jenax-arq-utils</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-models-rdfs</artifactId>
+		</dependency>
 		<!-- Unit Testing -->
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
