--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -90,7 +90,7 @@
 		<!-- <jgit.version>6.7.0.202309050840-r</jgit.version> -->
 		<jgit.version>5.6.0.201912101111-r</jgit.version>
 		<jsch.version>0.0.9</jsch.version>
-		
+
 		<sis.version>1.4</sis.version>
 
 		<velocity-engine.version>2.3</velocity-engine.version>
@@ -270,6 +270,11 @@
 			<dependency>
 				<groupId>org.aksw.jenax</groupId>
 				<artifactId>jenax-arq-plugins-service-vfs</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.aksw.jenax</groupId>
+				<artifactId>jenax-norse-terms</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
@@ -1222,9 +1227,10 @@
 						<groupId>org.slf4j</groupId>
 						<artifactId>slf4j-reload4j</artifactId>
 					</exclusion>
-					<exclusion> <groupId>log4j</groupId>
-					<artifactId>log4j</artifactId> 
-						</exclusion>
+					<exclusion>
+						<groupId>log4j</groupId>
+						<artifactId>log4j</artifactId>
+					</exclusion>
 					<exclusion>
 						<groupId>org.slf4j</groupId>
 						<artifactId>slf4j-log4j12</artifactId>
@@ -1241,13 +1247,14 @@
 				</exclusions>
 			</dependency>
 
-			<!-- Override hadoop's commons-text version because it conflicts with Fuseki's shiro mod -->
+			<!-- Override hadoop's commons-text version because it conflicts
+			with Fuseki's shiro mod -->
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-text</artifactId>
 				<version>${commons-text.version}</version>
 			</dependency>
-			
+
 			<!-- Servlet APIs -->
 			<dependency>
 				<groupId>jakarta.servlet</groupId>
