--- a/jenax-norse-parent/jenax-norse-terms/pom.xml
+++ b/jenax-norse-parent/jenax-norse-terms/pom.xml
@@ -4,41 +4,18 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>jenax-arq-plugins-datatypes</artifactId>
+	<artifactId>jenax-norse-terms</artifactId>
 	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>org.aksw.jenax</groupId>
-		<artifactId>jenax-arq-plugins-parent</artifactId>
+		<artifactId>jenax-norse-parent</artifactId>
 		<version>5.1.0-1-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.aksw.jenax</groupId>
-			<artifactId>jenax-norse-terms</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.jena</groupId>
-			<artifactId>jena-arq</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.aksw.jenax</groupId>
-			<artifactId>jenax-arq-utils</artifactId>
-		</dependency>
-
-<!-- 		<dependency> -->
-<!-- 			<groupId>com.google.code.gson</groupId> -->
-<!-- 			<artifactId>gson</artifactId> -->
-<!-- 		</dependency> -->
-
-		<!-- <dependency> <groupId>org.aksw.jenax</groupId> <artifactId>jenax-arq-connection-core</artifactId> 
-			</dependency> -->
 
 		<!-- Unit Testing -->
-
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -50,7 +27,6 @@
 			<artifactId>jenax-resources-test-config</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 
 	</dependencies>
 </project>
