--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<module>jenax-resources-parent</module>
 		<module>jenax-annotations-parent</module>
 		<module>jenax-jgrapht-parent</module>
+		<module>jenax-norse-parent</module>
 		<module>jenax-arq-parent</module>
 		<module>jenax-rx-parent</module>
 		<module>jenax-analytics-parent</module>
