--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -1122,7 +1122,7 @@
 			<dependency>
 				<groupId>org.aksw.thirdparty.com.sshtools</groupId>
 				<artifactId>vfs2nio</artifactId>
-				<version>0.0.1-2</version>
+				<version>0.0.1-3-SNAPSHOT</version>
 				<exclusions>
 					<exclusion>
 						<groupId>commons-logging</groupId>
