--- a/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
+++ b/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
@@ -46,12 +46,12 @@
 			<artifactId>jaxb-runtime</artifactId>
 		</dependency>
 
-<!-- Uber's h3 library is referenced indirectly via apache sedona -->
-<!--		<dependency>-->
-<!--			<groupId>com.uber</groupId>-->
-<!--			<artifactId>h3</artifactId>-->
-<!--		</dependency>-->
-		
+		<!-- Uber's h3 library is referenced indirectly via apache sedona -->
+		<!--		<dependency>-->
+		<!--			<groupId>com.uber</groupId>-->
+		<!--			<artifactId>h3</artifactId>-->
+		<!--		</dependency>-->
+
 		<!-- javascript -->
 		<dependency>
 			<groupId>org.openjdk.nashorn</groupId>
@@ -214,11 +214,11 @@
 			<artifactId>sedona-common</artifactId>
 		</dependency>
 
-		<!-- <dependency> -->
-		<!-- <groupId>org.locationtech.jts</groupId> -->
-		<!-- <artifactId>jts-core</artifactId> -->
-		<!-- <version>${jts.version}</version> -->
-		<!-- </dependency> -->
+		<!-- We should rely on jena-geosparql here but the new CoverageSimplifier is not yet in jena ~ 2024-09-11 -->
+		<dependency>
+			<groupId>org.locationtech.jts</groupId>
+			<artifactId>jts-core</artifactId>
+		</dependency>
 
 		<!-- <dependency> -->
 		<!-- <groupId>com.vividsolutions</groupId> -->
