set logging for tests back to info

--- a/jenax-resources-parent/jenax-resources-test-config/src/main/resources/log4j2.properties
+++ b/jenax-resources-parent/jenax-resources-test-config/src/main/resources/log4j2.properties
@@ -7,8 +7,8 @@ appender.console.target = SYSTEM_ERR
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d [%t] %-5p %c: %m%n
 
-#rootLogger.level = info
-rootLogger.level = debug
+rootLogger.level = info
+# rootLogger.level = debug
 rootLogger.appenderRef.stderr.ref = STDERR
 
 logger.jena-shared.name = org.apache.jena.shared
