--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -99,6 +99,7 @@
 		<!-- <jgit.version>6.7.0.202309050840-r</jgit.version> -->
 		<jgit.version>5.6.0.201912101111-r</jgit.version>
 		<jsch.version>0.0.9</jsch.version>
+		<commons-lang3.version>3.17.0</commons-lang3.version>
 
 		<sis.version>1.4</sis.version>
 
@@ -1092,7 +1093,7 @@
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-lang3</artifactId>
-				<version>3.12.0</version>
+				<version>${commons-lang3.version}</version>
 			</dependency>
 			<!-- Command Line Argument Parsing -->
 			<dependency>
