--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -11,8 +11,8 @@
 	<artifactId>jenax-bom</artifactId>
 	<version>5.2.0-1-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>Jena eXtension Components</name>
-	<description>Modular extensions for Apache Jena</description>
+	<name>Unofficial Jena eXtension Components</name>
+	<description>Unofficial modular extensions for Apache Jena</description>
 	<url>https://github.com/Scaseco/jenax</url>
 	<issueManagement>
 		<url>https://github.com/Scaseco/jenax/issues</url>
@@ -69,7 +69,7 @@
 		jakarta.xml; used only by a plugin in jenax-facete-impl -->
 
 		<!-- <jena.version>4.10.0</jena.version> -->
-		<jena.version>5.2.0-SNAPSHOT</jena.version>
+		<jena.version>5.2.0</jena.version>
 
 		<!-- <jetty.version>9.4.8.v20171121</jetty.version> -->
 		<!-- <jetty.version>9.4.18.v20190429</jetty.version> -->
@@ -91,7 +91,7 @@
 		<commons-text.version>1.10.0</commons-text.version>
 		<junit.version>4.13.2</junit.version>
 		<tika.version>2.9.1</tika.version>
-		<aksw-commons.version>0.9.9-SNAPSHOT</aksw-commons.version>
+		<aksw-commons.version>0.9.9</aksw-commons.version>
 		<jts.version>1.20.0</jts.version>
 		<gson.version>2.9.0</gson.version>
 		<annotation-api.version>1.3.2</annotation-api.version>
@@ -1123,7 +1123,7 @@
 			<dependency>
 				<groupId>org.aksw.thirdparty.com.sshtools</groupId>
 				<artifactId>vfs2nio</artifactId>
-				<version>0.0.1-3-SNAPSHOT</version>
+				<version>0.0.1-3</version>
 				<exclusions>
 					<exclusion>
 						<groupId>commons-logging</groupId>
