Added a new SPARQL function macros module; added ollama macros to it.

--- a/jenax-resources-parent/pom.xml
+++ b/jenax-resources-parent/pom.xml
@@ -18,5 +18,6 @@
 		<module>jenax-resources-prefixes</module>
 		<module>jenax-resources-servicedescription</module>
 		<module>jenax-resources-void</module>
+		<module>jenax-resources-macros</module>
 	</modules>
 </project>
