Added missing module declaration for jenax-resources-macros to jenax-bom

--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -225,6 +225,11 @@
 			</dependency>
 			<dependency>
 				<groupId>org.aksw.jenax</groupId>
+				<artifactId>jenax-resources-macros</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.aksw.jenax</groupId>
 				<artifactId>jenax-arq-connection-extra</artifactId>
 				<version>${project.version}</version>
 			</dependency>
