Added RDFDatabase and FileSet abstractions. Implemented for TDB2 and Qlever.

--- a/jenax-arq-parent/jenax-arq-connection-parent/jenx-arq-connection-qlever/pom.xml
+++ b/jenax-arq-parent/jenax-arq-connection-parent/jenx-arq-connection-qlever/pom.xml
@@ -21,6 +21,12 @@
 		</dependency>
 
 		<dependency>
+		    <groupId>commons-beanutils</groupId>
+		    <artifactId>commons-beanutils</artifactId>
+		    <version>1.9.3</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.jena</groupId>
 			<artifactId>jena-rdfconnection</artifactId>
 		</dependency>
