--- a/jenax-server-parent/jenax-server-standalone/pom.xml
+++ b/jenax-server-parent/jenax-server-standalone/pom.xml
@@ -19,7 +19,12 @@
 			<groupId>org.aksw.jenax</groupId>
 			<artifactId>jenax-server-frontends</artifactId>
 		</dependency>
-
+<!--
+<dependency>
+    <groupId>org.glassfish.jaxb</groupId>
+    <artifactId>jaxb-runtime</artifactId>
+</dependency>
+-->
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
 			<artifactId>jenax-arq-stmt</artifactId>
