--- a/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
+++ b/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
@@ -129,6 +129,11 @@
 			<artifactId>jenax-io-core</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-connection-qlever</artifactId>
+		</dependency>
+
 		<!-- Auto-binding of SPARQL and Java functions -->
 		<!-- May separate this functionality from resource proxy generation in 
 			the future -->
