changed junit to compile

--- a/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
+++ b/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
@@ -267,7 +267,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<scope>test</scope>
+			<scope>compile</scope> <!-- HACK because current test container version needs junit bundled. -->
 		</dependency>
 
 		<dependency>
