Disabled junit exclusion for plugin bundle due to junit dependency.

--- a/jenax-arq-parent/jenax-arq-plugins-parent/pom.xml
+++ b/jenax-arq-parent/jenax-arq-plugins-parent/pom.xml
@@ -41,7 +41,7 @@
 										<excludes>
 											<exclude>org.apache.jena:*</exclude>
 											<exclude>classworlds:classworlds</exclude>
-											<exclude>junit:junit</exclude>
+											<!-- <exclude>junit:junit</exclude> excluded for testcontainers --> 
 											<exclude>jmock:*</exclude>
 											<exclude>*:xml-apis</exclude>
 											<exclude>org.apache.maven:lib:tests</exclude>
