removed playground as a module

--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 		<module>jenax-graphql-parent</module>
 		<!-- <module>jenax-cli-core</module> -->
 
-		<module>jenax-playground</module>
+		<!-- <module>jenax-playground</module> -->
 	</modules>
 
 	<properties>
