--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -68,8 +68,8 @@
 		<javax.xml.version>2.3.1</javax.xml.version> <!-- legacy; superseded by
 		jakarta.xml; used only by a plugin in jenax-facete-impl -->
 
-		<!-- <jena.version>5.4.0</jena.version> -->
-		<jena.version>5.5.0-SNAPSHOT</jena.version>
+		<jena.version>5.4.0</jena.version>
+		<!-- <jena.version>5.5.0-SNAPSHOT</jena.version> -->
 
 		<!-- <jetty.version>9.4.8.v20171121</jetty.version> -->
 		<!-- <jetty.version>9.4.18.v20190429</jetty.version> -->
