configured backport branch

--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -1685,6 +1685,7 @@
 				<configuration>
 					<gitFlowConfig>
 						<versionTagPrefix>v</versionTagPrefix>
+						<developmentBranch>jena-5.4.0-backport</developmentBranch>
 					</gitFlowConfig>
 				</configuration>
 			</plugin>
