--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -92,7 +92,7 @@
 		<commons-exec.version>1.4.0</commons-exec.version>
 		<junit.version>4.13.2</junit.version>
 		<tika.version>2.9.1</tika.version>
-		<aksw-commons.version>0.9.10-SNAPSHOT</aksw-commons.version>
+		<aksw-commons.version>0.9.10</aksw-commons.version>
 		<jts.version>1.20.0</jts.version>
 		<gson.version>2.9.0</gson.version>
 		<annotation-api.version>1.3.2</annotation-api.version>
